--- a/src/panels/home.html
+++ b/src/panels/home.html
@@ -17,7 +17,7 @@
         </div>
         <div class="social-tab">
             <div class="social-list content-scroll">
-                <div data-url="https://discord.gg/97YghRTSHe" class="social-block">
+                <div data-url="https://discord.gg/SAMqGefDaJ" class="social-block">
                     <div class="icon-discord icon-social"></div>
                 </div>
 
@@ -25,9 +25,9 @@
                     <div class="icon-web icon-social"></div>
                 </div>
 
-                <div data-url="https://www.youtube.com/LuuxisHD" class="social-block">
+                <!-- <div data-url="https://www.youtube.com/LuuxisHD" class="social-block">
                     <div class="icon-youtube icon-social"></div>
-                </div>
+                </div> -->
             </div>
         </div>
     </div>
